fix: harden 1.21.1 behavior and networking